--- a/GDBAcreageReport/GDBAcreageReport.Rmd
+++ b/GDBAcreageReport/GDBAcreageReport.Rmd
@@ -6,10 +6,12 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-library(rgdal)
-library(plyr)
-library(soilDB)
-library(knitr)
+library(DT, quietly = TRUE)
+library(RODBC, quietly = TRUE)
+library(rgdal, quietly = TRUE)
+library(soilDB, quietly = TRUE)
+library(knitr, quietly = TRUE)
+
 knitr::opts_chunk$set(echo = FALSE)
 #poly.dsn = "L:/NRCS/MLRAShared/CA630/Archived_OFFICIAL_DB/final/FG_CA630_GIS_2018.gdb"
 #poly.dsn = "L:/NRCS/MLRAShared/CA077/final/CA077_Join_FY2018_0817_TKK.gdb"
@@ -18,42 +20,93 @@ knitr::opts_chunk$set(echo = FALSE)
 #poly.dsn = "L:/NRCS/MLRAShared/CA648/final/CA648_Join_FY2018_0730_TKK.gdb"
 #poly.dsn = "L:/NRCS/MLRAShared/CA649/final/CA649_Join_FY2018_0814_TKK.gdb"
 #poly.dsn = "L:/NRCS/MLRAShared/CA731/final/CA731_Join_FY2018_0821_TKK.gdb"
-#
+poly.dsn <- "E:/CA649/Geodata/Offical_Geodatabase/FGCA649_Projects_2020_0814_agb.gdb"
 #layerz <- list('CA630'='ca630_a','CA077'='ca077_a','CA632'='ca632_a','CA644'='ca644_a','CA648'='ca648_a','CA649'='ca649_a','CA731'='ca731_a')
-poly.layer = "ca731_a"
-poly.bounds = "ca731_b"
+poly.layer = "ca649_a"
+poly.bounds = "ca649_b"
+area.symbol <- "CA649"
+order.by.col <- "Change" # options: Change, MUSYM, Legend_Acres, Spatial_Acres, Status, MURecID, Match
+```
+
+```{r results='asis'}
+cat(paste0("## ", area.symbol))
 ```
 
 ```{r}
 get_NASIS_legendmu <- function() {
-  # must have RODBC installed
-  if(!requireNamespace('RODBC'))
-    stop('please install the `RODBC` package', call.=FALSE)
-  q <- "SELECT muiidref, musym, mustatus, muacres FROM lmapunit_View_1;"
+  q <- "SELECT * FROM lmapunit_View_1 lmv;"
   # setup connection local NASIS
-  channel <- RODBC::odbcDriverConnect(connection="DSN=nasis_local;UID=NasisSqlRO;PWD=nasisRe@d0n1y")
-  d <- RODBC::sqlQuery(channel, q, stringsAsFactors=FALSE)
-  RODBC::odbcClose(channel)
+  channel <- soilDB:::.openNASISchannel()
+  d <- sqlQuery(channel, q, stringsAsFactors=FALSE)
+  odbcClose(channel)
+  return(d)
+}
+
+get_NASIS_legend <- function() {
+  q <- "SELECT * FROM legend_View_1 lv INNER JOIN area_View_1 ar ON lv.areaiidref = ar.areaiid;"
+  # setup connection local NASIS
+  channel <- soilDB:::.openNASISchannel()
+  d <- sqlQuery(channel, q, stringsAsFactors=FALSE)
+  odbcClose(channel)
   return(d)
 }
 
 # Get map unit data
 mu <- readOGR(dsn = poly.dsn, layer = poly.layer, stringsAsFactors=FALSE)
 df <- mu@data
-df$Acres_calc <- round(df$Shape_Area / 4046.86)
-foo <- ldply(split(df, df$MUSYM, drop=TRUE), .fun=function(x) { sum(x$Acres_calc) })
-colnames(foo) <- c("MUSYM","Spatial_Acres")
-foo$Spatial_Acres <- round(foo$Spatial_Acres)
-oldacres <- df$acres
-legend_mu <- uncode(get_NASIS_legendmu())
-names(legend_mu) <- c("MU Rec ID", "MUSYM", "Status","Legend_Acres")
 
-legend_mu2 <- join(legend_mu, foo, by=c("MUSYM"), type="full")
-legend_mu2 <- legend_mu2[order(legend_mu2$MUSYM, decreasing = FALSE),]
-legend_mu2$Legend_Acres[is.na(legend_mu2$Legend_Acres)] <- 0
-legend_mu2$Spatial_Acres[is.na(legend_mu2$Spatial_Acres)] <- 0
-legend_mu2$match = (legend_mu2$Legend_Acres==legend_mu2$Spatial_Acres)
+# sq. meters to acres
+df$Acres_calc <- df$Shape_Area / 4046.86
 
-kable(legend_mu2, row.names = FALSE)
-write.csv(legend_mu2, file = paste0("GDBAcreageReport_", poly.layer, "_", format(Sys.time(), '%Y%m%d'),".csv"))
+spatial_mu <- do.call('rbind', lapply(split(df, df$MUSYM, drop=TRUE), function(x) { 
+  data.frame(MUSYM = unique(x$MUSYM),
+             Spatial_Acres = sum(x$Acres_calc)) }))
+
+spatial_mu$Spatial_Acres <- round(spatial_mu$Spatial_Acres)
+
+legend_mu <- uncode(get_NASIS_legendmu(), stringsAsFactors = FALSE)
+legend_mu1 <- merge(legend_mu, uncode(get_NASIS_legend(), stringsAsFactors = FALSE), 
+                   by.x = "liidref", by.y = "liid", 
+                   all.x = TRUE, sort = FALSE)
+legend_mu2 <- legend_mu1[,c("areasymbol","muiidref","musym","mustatus","muacres")]
+
+legend_mu3 <-  rbind(subset(legend_mu2, areasymbol == eval(area.symbol)))
+names(legend_mu3) <- c("Area", "MURecID", "MUSYM", "Status","Legend_Acres")
+
+missing.musyms <- spatial_mu$MUSYM[!spatial_mu$MUSYM %in% legend_mu3$MUSYM]
+if (length(missing.musyms)) {
+  legend_missing <- legend_mu3[0,][1:length(missing.musyms),]
+  legend_missing$Area <- "missing"
+  legend_missing$MURecID <- "missing"
+  legend_missing$Status <- "missing"
+  legend_missing$MUSYM <- missing.musyms
+  legend_mu3 <- rbind(legend_mu3, legend_missing)
+}
+
+legend_mu4 <- merge(legend_mu3, spatial_mu, by = c("MUSYM"), all.x = TRUE, all.y = TRUE, sort = FALSE)
+
+legend_mu4$Legend_Acres[is.na(legend_mu4$Legend_Acres)] <- 0
+legend_mu4$Spatial_Acres[is.na(legend_mu4$Spatial_Acres)] <- 0
+legend_mu4$Change <- legend_mu4$Spatial_Acres - legend_mu4$Legend_Acres
+legend_mu4$Match = (legend_mu4$Legend_Acres == legend_mu4$Spatial_Acres)
+
+legend_mu5 <- legend_mu4[order(legend_mu4[[order.by.col]], decreasing = TRUE),]
+
+write.csv(legend_mu5, file = paste0("GDBAcreageReport_", poly.layer, "_", format(Sys.time(), '%Y%m%d'),".csv"))
+
+colnames(legend_mu5) <- gsub("_"," ",colnames(legend_mu5))
+
+DT::datatable(legend_mu5, rownames = FALSE, options = list(
+        columnDefs = list(list(className = 'dt-center', targets = 1:6)),
+        lengthMenu = list(c(10, 25, 50, -1), c('10', '25', '50', 'All')),
+        pageLength = 50,
+        initComplete = JS(
+            "function(settings, json) {",
+            "$(this.api().table().header()).css( {",
+            " 'background-color': '#216734',", # javascript for DT style
+            " 'color': '#fff'",
+            "});",
+            "}"), searchHighlight = TRUE),
+    escape = 1, filter = "bottom")
+
 ```
